--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "author": "Judd Keppel <kepzorz@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "json-stable-stringify": "^1.0.1",
+    "deterministic-json": "^1.0.4",
+    "jpfs": "0.0.3",
     "lodash.get": "^4.4.2",
+    "peer-channel": "^0.1.1",
     "proxmise": "^1.0.0",
-    "signalhub": "^4.9.0",
-    "tendermint": "^3.1.2",
-    "varstruct": "^6.1.2",
-    "webrtc-swarm": "^2.9.0",
-    "wrtc": "^0.1.3"
+    "tendermint": "^3.1.8",
+    "varstruct": "^6.1.2"
   }
 }
