--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Judd Keppel <kepzorz@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "create-hash": "^1.2.0",
     "debug": "^4.1.1",
     "deterministic-json": "^1.0.5",
     "discovery-channel": "^5.5.1",
