--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "deterministic-json": "^1.0.5",
     "discovery-channel": "^5.5.1",
     "lodash.get": "^4.4.2",
-    "merk": "^1.3.8",
+    "merk": "1.3.9",
     "proxmise": "^1.0.0",
     "tendermint": "^4.0.5",
     "varstruct": "^6.1.2"
